--- a/VideoAnalysis/Video_crop.ipynb
+++ b/VideoAnalysis/Video_crop.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dimensions: 1230 x 1216 px\n"
+      "dimensions: 1936 x 1216 px\n"
      ]
     }
    ],
@@ -29,7 +29,7 @@
     "\n",
     "# get first frame from video\n",
     "path = ''\n",
-    "input, video_format = '303_mk', '.mp4'\n",
+    "input, video_format = '292_p301s', '.mp4'\n",
     "input_file = path + input + video_format\n",
     "output_file = path + input\n",
     "\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,14 +53,14 @@
        "(None, None)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# trim video according to frames\n",
-    "output = ffmpeg.output(ffmpeg.input(input_file).trim(start_frame=0, end_frame=100), f'{output_file}_trim.mp4')\n",
+    "output = ffmpeg.output(ffmpeg.input(input_file).trim(start_frame=0, end_frame=4200), f'{output_file}_trim.mp4')\n",
     "ffmpeg.run(output)"
    ]
   },
