--- a/VideoAnalysis/Video_crop.ipynb
+++ b/VideoAnalysis/Video_crop.ipynb
@@ -75,8 +75,8 @@
     "print(f'{len(files)} files found in path directory {path}\\n'\n",
     "      f'{files}\\n')\n",
     "\n",
+    "# get video properties of all videos in list\n",
     "for file in files:\n",
-    "      # get properties of first video\n",
     "      vid = cv2.VideoCapture(path + file)\n",
     "\n",
     "      width = int(vid.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
@@ -84,7 +84,6 @@
     "      nframes = int(vid.get(cv2.CAP_PROP_FRAME_COUNT))\n",
     "      fps = int(vid.get(cv2.CAP_PROP_FPS))\n",
     "      duration = nframes / fps\n",
-    "\n",
     "\n",
     "      print(f'{file}\\n'\n",
     "            f'dimensions: {width} x {height} px\\n'\n",
