--- a/VideoAnalysis/Video_crop.ipynb
+++ b/VideoAnalysis/Video_crop.ipynb
@@ -16,41 +16,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 files found in path directory C:\\Users\\landgrafn\\NFCyber\\VideoAnalysis\\data\\\n",
-      "['2m_292_adjusted.mp4', '2m_293_adjusted.mp4', '2m_301_adjusted.mp4', '2m_303_adjusted.mp4', '2m_304_adjusted.mp4', '2m_315_adjusted.mp4']\n",
+      "1 files found in path directory C:\\Users\\landgrafn\\NFCyber\\VideoAnalysis\\data\\\n",
+      "['2m_292_adjusted_adjusted.mp4']\n",
       "\n",
-      "2m_292_adjusted.mp4\n",
-      "dimensions: 1140 x 1140 px\n",
-      "nframes: 60001\n",
-      "fps: 100\n",
-      "duration: 600.01 s\n",
-      "\n",
-      "2m_293_adjusted.mp4\n",
-      "dimensions: 1140 x 1140 px\n",
-      "nframes: 60001\n",
-      "fps: 100\n",
-      "duration: 600.01 s\n",
-      "\n",
-      "2m_301_adjusted.mp4\n",
-      "dimensions: 1140 x 1140 px\n",
-      "nframes: 60001\n",
-      "fps: 100\n",
-      "duration: 600.01 s\n",
-      "\n",
-      "2m_303_adjusted.mp4\n",
-      "dimensions: 1140 x 1140 px\n",
-      "nframes: 60001\n",
-      "fps: 100\n",
-      "duration: 600.01 s\n",
-      "\n",
-      "2m_304_adjusted.mp4\n",
-      "dimensions: 1140 x 1140 px\n",
-      "nframes: 60001\n",
-      "fps: 100\n",
-      "duration: 600.01 s\n",
-      "\n",
-      "2m_315_adjusted.mp4\n",
-      "dimensions: 1140 x 1140 px\n",
+      "2m_292_adjusted_adjusted.mp4\n",
+      "dimensions: 570 x 570 px\n",
       "nframes: 60001\n",
       "fps: 100\n",
       "duration: 600.01 s\n",
@@ -264,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +243,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
