--- a/VideoAnalysis/Video_crop.ipynb
+++ b/VideoAnalysis/Video_crop.ipynb
@@ -9,33 +9,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 files found in path directory C:\\Users\\landgrafn\\NFCyber\\VideoAnalysis\\data\\\n",
-      "['OF_trim.mp4', 'OF_trim_adjusted_0.5.mp4', 'OF_trim_adjusted_0.66.mp4']\n",
+      "6 files found in path directory C:\\Users\\landgrafn\\NFCyber\\VideoAnalysis\\data\\\n",
+      "['1m_292.mp4', '1m_293.mp4', '1m_301.mp4', '1m_303.mp4', '1m_304.mp4', '1m_315.mp4']\n",
       "\n",
-      "OF_trim.mp4\n",
+      "1m_292.mp4\n",
       "dimensions: 1936 x 1216 px\n",
-      "nframes: 1000\n",
-      "fps: 100\n",
-      "duration: 10.0 s\n",
+      "nframes: 43157\n",
+      "fps: 72\n",
+      "duration: 599.4027777777778 s\n",
       "\n",
-      "OF_trim_adjusted_0.5.mp4\n",
-      "dimensions: 694 x 608 px\n",
-      "nframes: 1000\n",
-      "fps: 100\n",
-      "duration: 10.0 s\n",
+      "1m_293.mp4\n",
+      "dimensions: 1936 x 1216 px\n",
+      "nframes: 43157\n",
+      "fps: 72\n",
+      "duration: 599.4027777777778 s\n",
       "\n",
-      "OF_trim_adjusted_0.66.mp4\n",
-      "dimensions: 926 x 810 px\n",
-      "nframes: 1000\n",
-      "fps: 100\n",
-      "duration: 10.0 s\n",
+      "1m_301.mp4\n",
+      "dimensions: 1936 x 1216 px\n",
+      "nframes: 43157\n",
+      "fps: 72\n",
+      "duration: 599.4027777777778 s\n",
+      "\n",
+      "1m_303.mp4\n",
+      "dimensions: 1936 x 1216 px\n",
+      "nframes: 43157\n",
+      "fps: 72\n",
+      "duration: 599.4027777777778 s\n",
+      "\n",
+      "1m_304.mp4\n",
+      "dimensions: 1936 x 1216 px\n",
+      "nframes: 43157\n",
+      "fps: 72\n",
+      "duration: 599.4027777777778 s\n",
+      "\n",
+      "1m_315.mp4\n",
+      "dimensions: 1936 x 1216 px\n",
+      "nframes: 43157\n",
+      "fps: 72\n",
+      "duration: 599.4027777777778 s\n",
       "\n"
      ]
     }
@@ -47,7 +65,7 @@
     "import os\n",
     "\n",
     "path = 'C:\\\\Users\\\\landgrafn\\\\NFCyber\\\\VideoAnalysis\\\\data\\\\'\n",
-    "common_name = 'OF_trim'\n",
+    "common_name = '1m'\n",
     "file_format = '.mp4'\n",
     "\n",
     "# get all file names in directory into list\n",
@@ -76,29 +94,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1000 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:32<00:00, 30.93it/s]\n"
+      "100%|██████████| 43157/43157 [12:03<00:00, 59.65it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\landgrafn\\NFCyber\\VideoAnalysis\\data\\OF_trim.mp4 done!\n",
-      "input: 1000 frames, output: 1000 frames\n",
+      "C:\\Users\\landgrafn\\NFCyber\\VideoAnalysis\\data\\1m_292.mp4 done! input: 43157 frames, output: 43157 frames\n",
       "\n",
       "\n"
      ]
@@ -107,37 +117,101 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 102/1000 [00:02<00:23, 37.98it/s]\n"
+      "100%|██████████| 43157/43157 [11:58<00:00, 60.03it/s]\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 54\u001b[0m\n\u001b[0;32m     51\u001b[0m input_file \u001b[38;5;241m=\u001b[39m path \u001b[38;5;241m+\u001b[39m file\n\u001b[0;32m     52\u001b[0m output_file \u001b[38;5;241m=\u001b[39m input_file\u001b[38;5;241m.\u001b[39mreplace(file_format, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_adjusted\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m file_format\n\u001b[1;32m---> 54\u001b[0m \u001b[43madjust_video\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_file\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[20], line 34\u001b[0m, in \u001b[0;36madjust_video\u001b[1;34m(input_file)\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;66;03m# BRIGHTNESS & CONTRAST\u001b[39;00m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;66;03m#frame = cv2.convertScaleAbs(frame, alpha=alpha, beta=beta)\u001b[39;00m\n\u001b[0;32m     30\u001b[0m \n\u001b[0;32m     31\u001b[0m \u001b[38;5;66;03m# RESIZE\u001b[39;00m\n\u001b[0;32m     32\u001b[0m frame \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mresize(frame, (new_width, new_height))  \u001b[38;5;66;03m# must be the same dimensions as in video = cv2.VideoWriter() \u001b[39;00m\n\u001b[1;32m---> 34\u001b[0m \u001b[43mvideo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# when you had range(1) to only check the first frame, write first frame. Delete it if >0\u001b[39;00m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m curr_frame \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\landgrafn\\NFCyber\\VideoAnalysis\\data\\1m_293.mp4 done! input: 43157 frames, output: 43157 frames\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 43157/43157 [10:37<00:00, 67.73it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\landgrafn\\NFCyber\\VideoAnalysis\\data\\1m_301.mp4 done! input: 43157 frames, output: 43157 frames\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 43157/43157 [10:37<00:00, 67.65it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\landgrafn\\NFCyber\\VideoAnalysis\\data\\1m_303.mp4 done! input: 43157 frames, output: 43157 frames\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 43157/43157 [10:35<00:00, 67.94it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\landgrafn\\NFCyber\\VideoAnalysis\\data\\1m_304.mp4 done! input: 43157 frames, output: 43157 frames\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 43157/43157 [10:35<00:00, 67.92it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\landgrafn\\NFCyber\\VideoAnalysis\\data\\1m_315.mp4 done! input: 43157 frames, output: 43157 frames\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "# properties of future video\n",
-    "x1, y1 = 180, 0   # top left corner of future cropped image\n",
+    "# CROP\n",
+    "x1, y1 = 100, 0   # top left corner of future cropped image\n",
     "x2, y2 = 1570, 1216    # bottom right corner of future cropped image\n",
     "\n",
+    "# BRIGHTNESS & CONTRAST\n",
     "alpha = 1   # brightness: 1.0-original, <1.0-darker, >1.0-brighter\n",
-    "beta = -10    # contrast: 0-unchanged, <0-lower contrast, >0-higher contrast\n",
-    "\n",
-    "new_width, new_height = 1500, 1500\n",
-    "#new_width, new_height = x2-x1, y2-y1                    # USE THIS WHEN     CROP     & NOT REDUCE QUALITY\n",
-    "#new_width, new_height = int((x2-x1)*2/3), int((y2-y1)*2/3)  # USE THIS WHEN     CROP     &     REDUCE QUALITY\n",
-    "#new_width, new_height = int(width/2), int(height/2)     # USE THIS WHEN NOT CROP     &     REDUCE QUALITY\n",
+    "beta = -0    # contrast: 0-unchanged, <0-lower contrast, >0-higher contrast\n",
     "\n",
     "\n",
-    "def adjust_video(input_file):\n",
+    "def adjust_video(input_file, output_file, new_width, new_height, fps):\n",
     "    cap = cv2.VideoCapture(input_file)\n",
     "    first_frame = input_file.replace(file_format, '') + '_firstFrame.png'\n",
     "\n",
@@ -149,7 +223,7 @@
     "\n",
     "        if ret:            \n",
     "            # CROP\n",
-    "            frame = frame[y1:y2, x1:x2]\n",
+    "            #frame = frame[y1:y2, x1:x2]\n",
     "\n",
     "            # BRIGHTNESS & CONTRAST\n",
     "            #frame = cv2.convertScaleAbs(frame, alpha=alpha, beta=beta)\n",
@@ -171,13 +245,25 @@
     "    cap.release()\n",
     "    video.release()\n",
     "\n",
-    "    print(f'{input_file} done!\\ninput: {nframes} frames, output: {curr_frame+1} frames\\n\\n')\n",
+    "    print(f'{input_file} done! input: {nframes} frames, output: {curr_frame+1} frames\\n\\n')\n",
     "\n",
     "for file in files:\n",
-    "    input_file = path + file\n",
-    "    output_file = input_file.replace(file_format, '') + '_adjusted' + file_format\n",
+    "    vid = cv2.VideoCapture(path + file)\n",
+    "    width = int(vid.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "    height = int(vid.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "    nframes = int(vid.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "    fps = int(vid.get(cv2.CAP_PROP_FPS))\n",
     "\n",
-    "    adjust_video(input_file)"
+    "    #new_width, new_height = x2-x1, y2-y1                        # USE THIS WHEN     CROP     & NOT REDUCE QUALITY\n",
+    "    #new_width, new_height = int((x2-x1)*2/3), int((y2-y1)*2/3)  # USE THIS WHEN     CROP     &     REDUCE QUALITY\n",
+    "    new_width, new_height = int(width/2), int(height/2)         # USE THIS WHEN NOT CROP     &     REDUCE QUALITY\n",
+    "    #new_width, new_height = width, height                       # USE THIS WHEN NOT CROP     & NOT REDUCE QUALITY\n",
+    "\n",
+    "\n",
+    "    input_file = path + file\n",
+    "    output_file = input_file.replace(file_format, '') + '_edit' + file_format\n",
+    "\n",
+    "    adjust_video(input_file, output_file, new_width, new_height, fps)"
    ]
   },
   {
